--- a/categ.html
+++ b/categ.html
@@ -32,73 +32,73 @@
     <div class="categorias2">
         <div class="cat1">
             <img src="imagens/categorias2/bola.volei.svg">
-            <p>bolas de volei</p>
+            <p>BOLAS DE VÔLEI</p>
         </div>
         <div class="cat2">
             <img src="imagens/categorias2/bola.fut.svg">
-            <p>bolas de futebol</p>
+            <p>BOLAS DE FUTEBOL</p>
         </div>
         <div class="cat3">
             <img src="imagens/categorias2/bola.basq.svg">
-            <p>bolas de basquete</p>
+            <p>BOLAS DE BASQUETE</p>
         </div>
         <div class="cat4">
             <img src="imagens/categorias2/bola.hand.svg">
-            <p>bolas de handebol</p>
+            <p>BOLAS DE HANDEBOL</p>
         </div>
     </div>
     <div class="categorias2">
         <div class="cat5">
             <img src="imagens/categorias2/regatas.svg">
-            <p>regatas</p>
+            <p>REGATAS</p>
         </div>
         <div class="cat6">
             <img src="imagens/categorias2/camisetas.svg">
-            <p>camisetas</p>
+            <p>CAMISETAS</p>
         </div>
         <div class="cat7">
             <img src="imagens/categorias2/chuteiras.svg">
-            <p>chuteiras</p>
+            <p>CHUTEIRAS</p>
         </div>
         <div class="cat8">
             <img src="imagens/categorias2/tenis.svg">
-            <p>tênis</p>
+            <p>TÊNIS</p>
         </div>
     </div>
     <div class="categorias2">
         <div class="cat9">
             <img src="imagens/categorias2/meias.svg">
-            <p>meias</p>
+            <p>MEIAS</p>
         </div>
         <div class="cat10">
             <img src="imagens/categorias2/luvas.svg">
-            <p>luvas</p>
+            <p>LUVAS</p>
         </div>
         <div class="cat11">
             <img src="imagens/categorias2/pesos.svg">
-            <p>pesos</p>
+            <p>PESOS</p>
         </div>
         <div class="cat12">
             <img src="imagens/categorias2/raquetes.svg">
-            <p>raquetes</p>
+            <p>RAQUETES</p>
         </div>
     </div>
     <div class="categorias2">
         <div class="cat13">
             <img src="imagens/categorias2/acss.yoga.svg">
-            <p>acessórios para ioga</p>
+            <p>ACESSÓRIOS PARA IOGA</p>
         </div>
         <div class="cat14">
             <img src="imagens/categorias2/acss.golf.svg">
-            <p>acessórios para golf</p>
+            <p>ACESSÓRIOS PARA GOLF</p>
         </div>
         <div class="cat15">
             <img src="imagens/categorias2/acss.volei.svg">
-            <p>acessórios para volêi</p>
+            <p>ACESSÓRIOS DE VÔLEI</p>
         </div>
         <div class="cat16">
             <img src="imagens/categorias2/acss.hand.svg">
-            <p>acessórios para futebol</p>
+            <p>ACESSÓRIOS DE HANDEBOL</p>
         </div>
     </div>
 
