--- a/pginit.html
+++ b/pginit.html
@@ -42,49 +42,49 @@
     </div>
     <!--categorias-->
     <div class="text">
-        <h1>categorias</h1>
+        <h1>CATEGORIAS</h1>
     </div>
     <div class="categorias1" id="categorias">
 
         <div class="cat1">
             <img src="imagens/categorias/categorias/femenino.svg">
-            <p>femenino</p>
+            <p>FEMININO</p>
         </div>
         <div class="cat2">
             <img src="imagens/categorias/categorias/masculino.svg">
-            <p>masculino</p>
+            <p>MASCULINO</p>
         </div>
         <div class="cat3">
             <img src="imagens/categorias/categorias/infantil.svg">
-            <p>infantil</p>
+            <p>INFANTIL</p>
         </div>
         <div class="cat4">
             <img src="imagens/categorias/categorias/calçados.svg">
-            <p>calçados</p>
+            <p>CALÇADOS</p>
         </div>
     </div>
     <div class="categorias2">
         <div class="cat5">
             <img src="imagens/categorias/categorias/roupas.svg">
-            <p>roupas</p>
+            <p>ROUPAS</p>
         </div>
         <div class="cat6">
             <img src="imagens/categorias/categorias/suplementos.svg">
-            <p>suplementos</p>
+            <p>SUPLEMENTOS</p>
         </div>
         <div class="cat7">
             <img src="imagens/categorias/categorias/equipamentos.svg">
-            <p>equipamentos</p>
+            <p>EQUIPAMENTOS</p>
         </div>
         <div class="cat8">
            <a href="categ.html"> <img src="imagens/categorias/categorias/categorias.svg"></a>
-            <p>categorias</p>
+            <p>CATEGORIAS</p>
         </div>
     </div>
     </div>
     <!--promoções-->
     <div class="text">
-        <h1>produtos em promoção</h1>
+        <h1>PRODUTOS EM PROMOÇÃO</h1>
     </div>
     <div class="promocoes" id="promocoes">
 
@@ -105,7 +105,7 @@
 
     </div>
     <!--destaques semana-->
-    <div class="text"><h1>destaques da semana</h1></div>
+    <div class="text"><h1>DESTAQUES DA SEMANA</h1></div>
     <div class="Destaques_smn" id="Destaques_smn">
         <img src="imagens/Destaques/SetaE.svg">
     <div class="dstq1">
@@ -123,7 +123,7 @@
         <img src="imagens/Destaques/SetaD.svg">
     </div>
     <!--marcas-->
-    <div class="text"> <h1>marcas filiadas</h1></div>
+    <div class="text"> <h1>MARCAS FILIADAS</h1></div>
     <div class="marcas" id="marcas">
         <img src="imagens/marcas/marca1.svg" width="177">
         <img src="imagens/marcas/marca2.svg" width="177">
